# cmake-build-number-counter

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
docs/: API.md  CONTRIBUTING.md  SECURITY.md  SERVER.md  TEST-COVERAGE.md  TROUBLESHOOTING.md
docs/adr/: 001-tcp-rst-on-early-http-error-response.md  002-rejected-pre-increment-mode.md  003-pooled-http-server-and-watchdog.md
examples/: README.md
examples/1-simple/: CMakeLists.txt  main.cpp
examples/2-with-server/: CMakeLists.txt  main.cpp
examples/3-custom-location/: CMakeLists.txt  main.cpp
examples/4-configure-mode/: CMakeLists.txt  main.cpp
src/: CMakeBuildNumber.cmake  client.py  server.py  validation.py
tests/: conftest.py  test_client.py  test_cmake.py  test_docker.py  test_integration.py  test_server.py  test_validation.py
